# JiuYanLian

./: .gitignore  README.md  pyproject.toml
.ci/docker/: requirements.txt
JiuYanLian/: checkpoint.py  config_manager.py  float8.py  logging.py  metrics.py  optimizer.py  profiling.py  utils.py
JiuYanLian/datasets/: __init__.py  hf_datasets.py
JiuYanLian/models/: __init__.py
JiuYanLian/models/llama/: __init__.py  modeling_llama.py  parallelize_llama.py  pipeline_llama.py
JiuYanLian/models/llama_multimodal/: __init__.py
JiuYanLian/models/qwen2/: __init__.py  modeling_qwen2.py  parallelize_qwen2.py  pipeline_qwen2.py
JiuYanLian/parallelisms/: __init__.py  parallel_dims.py  pipelining_utils.py  utils.py
scripts/: train_llama-70B.sh  train_llama-70B.slurm  train_llama.py  train_llama.sh  train_llama.slurm  train_qwen.py  train_qwen.sh  train_qwen.slurm
test/generate/: run_llama_pred.sh
tool/: convert_hf_to_dcp.py
train_configs/: debug_model.toml  llama2_13b.toml  llama2_70b.toml  llama2_7b.toml  qwen2_7b.toml
