# ---- All project specifications ---- #
[project]
name = "JiuYanLian"
description = "A powerfull and easy LLM trainer"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    { name = "laohur", email = "laohur@gmail.com" },
]
keywords = ["pytorch", "training", "llm"]
dependencies = [
    "transformers",
    # Hugging Face integrations
    "datasets>=2.19.0",

    # Tokenization
    "blobfile",
    "sentencepiece",
    "tiktoken",

    # Miscellaneous
    "tomli>=1.1.0"
]
dynamic = ["version"]

[project.urls]
GitHub = "https://github.com/pytorch/JiuYanLian"


[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "tensorboard",
]

[tool.setuptools.dynamic]
version = {file = "version.txt"}


# ---- Explicit project build information ---- #
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [""]
include = ["JiuYanLian*"]

[tool.setuptools.package-data]
recipes = ["train_configs/*.toml"]

[tool.pytest.ini_options]
addopts = ["--showlocals"]  # show local variables in tracebacks
